tests/neg/i13435.check
-- [E029] Pattern Match Exhaustivity Warning: tests/neg/i13435.scala:7:2 -----------------------------------------------
7 |  s match
  |  ^
  |  match may not be exhaustive.
  |
  |  It would fail on pattern case: (_), ((_, _), (_, _))

longer explanation available when compiling with `-explain`
-- Error: tests/neg/i13435.scala:8:10 ----------------------------------------------------------------------------------
8 |    case (dim: Axis, size: Int) => dim // error
  |          ^^^^^^^^^
  |          trait Singleton cannot be used in runtime type tests
